# MikroAudio

./: .gitignore  .gitmodules  build.gradle.kts  gradle.properties  settings.gradle.kts
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/kotlin/io/lemcoder/androidapp/: MainActivity.kt
androidApp/src/main/res/values/: themes.xml
core/: build.gradle.kts
core/src/androidInstrumentedTest/java/pl/lemanski/mikroaudio/internal/: AAudio.java  NativeTestHelper.java  NewApiUtils.java  ma_device_config.java  ma_resampler_config.java  miniaudio_h.java
core/src/androidInstrumentedTest/kotlin/pl/lemanski/mikroaudio/internal/: PlaybackManagerTest.kt
core/src/androidMain/: AndroidManifest.xml
core/src/androidMain/cpp/: CMakeLists.txt  CmakeLists.txt  aaudio_playback.c  mikro_audio_jni.c
core/src/androidMain/kotlin/pl/lemanski/mikroaudio/: PlaybackManager.android.kt  RecordManager.android.kt
core/src/androidMain/kotlin/pl/lemanski/mikroaudio/internal/: PlaybackManager.android.kt  (+2 more)
core/src/commonMain/kotlin/pl/lemanski/mikroaudio/: AudioEngine.kt  Exception.kt  Format.kt  MikroAudio.kt  PlaybackManager.kt  RecordManager.kt
core/src/main/java/pl/lemanski/mikroaudio/: MyClass.kt
core/src/nativeMain/kotlin/pl/lemanski/mikroaudio/: PlaybackManager.native.kt  RecordManager.native.kt
example/: build.gradle.kts
example/src/nativeMain/kotlin/: Main.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native/: libma.def
native/include/: mikro_audio.h
native/src/: mikro_audio.c  mikro_audio.h
(+9 files in other folders)
